--- a/src/index.html
+++ b/src/index.html
@@ -4,54 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguin Species</title>
+    <link href="theme/prism.css" rel="stylesheet" />
+    <script src="theme/prism.js"></script>
 </head>
 <body>
-    <ol>
-        <li>
-            <b>King Penguin<b>
+    <div>
+        <div>
+            <h1>Penguins</h1>
+            <p>Penguins are fascinating creatures that live primarily in the Southern Hemisphere, particularly in Antarctica. They are well-adapted to life in the water and on land.</p>
+            <h2>Types of Penguins</h2>
+            <p>There are several different species of penguins, each with unique characteristics.</p>
+            <ol>
+            <li><b>Emperor Penguin</b></li>
             <ul>
-                <li>Second-largest species.</li>
-                <li>Found in sub-Antarctic regions.</li>
-                <li>Their breeding season is different from the Emperor Penguin.</li>
-            </ul>
+            <li>The largest penguin species.</li>
+            <li>Known for their long migration patterns.</li>
+            <li>They can grow up to 1.2 meters (4 feet) tall.</li></ul>
+            <li><b>Adélie Penguin</b></li>
+            <ul>
+            <li>Smaller than the Emperor Penguin.</li>
+            <li>Typically found along the coast of Antarctica.</li>
+            <li><i>Fun fact</i>: They have a white ring around their eyes.</li></ul>
+            <li><b>King Penguin</b></li>
+            <ul>
+            <li>Second-largest species.</li>
+            <li>Found in sub-Antarctic regions.</li>
+            <li>Their breeding season is different from the Emperor Penguin.</li></ul>
             <h3>Other Types of Penguins:</h3>
             <ul>
-                <li><strong>Chinstrap Penguin</strong> - Known for the distinctive black band under their chin.</li>
-                <li><strong>Macaroni Penguin</strong> - Recognizable by their yellow "moustache."</li>
-                <li><strong>Little Blue Penguin</strong> - The smallest species, standing at only 33 cm (13 inches).</li>
-            </ul>
-        </li>
-    </ol>
-    <ol>
-        <li>hello1</li>
-        <li>hello2</li>
-        <ol>
-            <li>hello3</li>
-            <li>hello4</li>
-        </ol>
-    </ol>
-    <ul>
-        <li>hello1</li>
-        <li>hello2</li>
-        <ol>
-            <li>hello3</li>
-            <li>hello4</li>
-        </ol>
-
-    </ul>
-
-
-    <ol>
-        <li><b>King Penguin</b></li>
-        <h3>Other Types of Penguins</h3>
-        <ul>
-            <li>Macaroni Penguin</li>
+            <li><b>Chinstrap Penguin</b></li>
             <ul>
-                <li>Recognizable by their yellow "moustache."</li>
-            </ul>
-        </ul>
-    </ol>
-
-
+            <li>Known for the distinctive black band under their chin.</li></ul>
+            <li><b>Macaroni Penguin</b></li>
+            <ul>
+            <li>Recognizable by their yellow "moustache."</li></ul>
+            <li><b>Little Blue Penguin</b></li>
+            <ul>
+            <li>The smallest species, standing at only 33 cm (13 inches).</li></ul></ul></ol>
+            <h2>Habitat and Behavior</h2>
+            <p>Penguins spend much of their time in cold regions, although some species, like the Galápagos penguin, live in more temperate climates.</p>
+            <h3>Penguins' Adaptations</h3>
+            <p>Penguins are excellent swimmers, thanks to their:</p>
+            <ul>
+            <li>Streamlined bodies</li>
+            <li>Flipper-like wings</li>
+            <li>Dense feathers that trap air for insulation</li></ul>
+            <pre>
+            <code class="language-python"># Example code to represent penguin species
+            penguins = {
+                "Emperor": {"height": "1.2m", "location": "Antarctica"},
+                "Adélie": {"height": "0.7m", "location": "Antarctic coasts"},
+                "King": {"height": "1m", "location": "Sub-Antarctic regions"}
+            }
+            
+            # Display information about penguins
+            for species, info in penguins.items():
+                print(f"{species} penguin: {info['height']} tall, found in {info['location']}.")
+            </code></pre>
+            <h1>Quote about Penguins</h1>
+            <blockquote>"Penguins are the only birds who can’t fly, but they’ve learned how to soar underwater."
+            — Unknown
+            </blockquote>
+            <h1>Why Penguins Matter</h1>
+            <p>Penguins play an important role in their ecosystems, particularly in marine food chains. Their populations are monitored to gauge the health of their environment.</p>
+            <ul>
+            <li>Penguins are top predators in their food chain, eating fish, krill, and squid.</li>
+            <li>They are also prey to larger animals, such as seals and orcas.</li></ul>
+            <h1>Conclusion</h1>
+            <p>This markdown includes:</p>
+            <ul>
+            <li><b>Headings</b> (<code>#</code>, <code>##</code>, <code>###</code>)</li>
+            <li><b>Paragraphs</b></li>
+            <li><b>Ordered and nested lists</b></li>
+            <li><b>Code block</b> (a simple Python example)</li>
+            <li><b>Quote</b> with the <code>> </code> symbol</li></ul></div>
+            
 </body>
 </html>
