feat(): finished all functionalities

--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Penguin Species</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Tolkien Fan Club </title>
+    <link href="./index.css" rel="stylesheet">
     <link href="theme/prism.css" rel="stylesheet" />
     <script src="theme/prism.js"></script>
 </head>
+
 <body>
-    <div><h1>Penguins</h1><p>Penguins are fascinating creatures that live primarily in the Southern Hemisphere, particularly in Antarctica. They are well-adapted to life in the water and on land.</p><h2>Types of Penguins</h2><p>There are several different species of penguins, each with unique characteristics.</p><ol><li><b>Emperor Penguin</b></li><ul><li>The largest penguin species.</li><li>Known for their long migration patterns.</li><li>They can grow up to 1.2 meters (4 feet) tall.</li></ul><li><b>Adélie Penguin</b></li><ul><li>Smaller than the Emperor Penguin.</li><li>Typically found along the coast of Antarctica.</li><li><i>Fun fact</i>: They have a white ring around their eyes.</li></ul><li><b>King Penguin</b></li><ul><li>Second-largest species.</li><li>Found in sub-Antarctic regions.</li><li>Their breeding season is different from the Emperor Penguin.</li></ul><h3>Other Types of Penguins:</h3><ul><li><b>Chinstrap Penguin</b></li><ul><li>Known for the distinctive black band under their chin.</li></ul><li><b>Macaroni Penguin</b></li><ul><li>Recognizable by their yellow "moustache."</li></ul><li><b>Little Blue Penguin</b></li><ul><li>The smallest species, standing at only 33 cm (13 inches).</li></ul></ul></ol><h2>Habitat and Behavior</h2><p>Penguins spend much of their time in cold regions, although some species, like the Galápagos penguin, live in more temperate climates.</p><h3>Penguins' Adaptations</h3><p>Penguins are excellent swimmers, thanks to their:</p><ul><li>Streamlined bodies</li><li>Flipper-like wings</li><li>Dense feathers that trap air for insulation</li></ul><pre><code class="language-python"># Example code to represent penguin species
-        penguins = {
-            "Emperor": {"height": "1.2m", "location": "Antarctica"},
-            "Adélie": {"height": "0.7m", "location": "Antarctic coasts"},
-            "King": {"height": "1m", "location": "Sub-Antarctic regions"}
-        }
-        
-        # Display information about penguins
-        for species, info in penguins.items():
-            print(f"{species} penguin: {info['height']} tall, found in {info['location']}.")
-        </code></pre><h1>Quote about Penguins</h1><blockquote>"Penguins are the only birds who can’t fly, but they’ve learned how to soar underwater."
-        — Unknown
-        </blockquote><h1>Why Penguins Matter</h1><p>Penguins play an important role in their ecosystems, particularly in marine food chains. Their populations are monitored to gauge the health of their environment.</p><ul><li>Penguins are top predators in their food chain, eating fish, krill, and squid.</li><li>They are also prey to larger animals, such as seals and orcas.</li></ul><h1>Conclusion</h1><p>This markdown includes:</p><ul><li><b>Headings</b> (<code>#</code>, <code>##</code>, <code>###</code>)</li><li><b>Paragraphs</b></li><li><b>Ordered and nested lists</b></li><li><b>Code block</b> (a simple Python example)</li><li><b>Quote</b> with the <code>> </code> symbol</li></ul></div>
-        
+    <article>
+        <div><h1>Tolkien Fan Club</h1><p><b>I like Tolkien</b>. Read my <a href="/majesty">first post here</a> (sorry the link doesn't work yet)</p><blockquote>All that is gold does not glitter
+</blockquote><h2>Reasons I like Tolkien</h2><ul><li>You can spend years studying the legendarium and still not understand its depths</li><li>It can be enjoyed by children and adults alike</li><li>Disney <i>didn't ruin it</i></li><li>It created an entirely new genre of fantasy</li></ul><h2>My favorite characters (in order)</h2><ol><li>Gandalf</li><li>Bilbo</li><li>Sam</li><li>Glorfindel</li><li>Galadriel</li><li>Elrond</li><li>Thorin</li><li>Sauron</li><li>Aragorn</li></ol><p>Here's what <code>elflang</code> looks like (the perfect coding language):</p><pre><code>func main(){
+    fmt.Println("Hello, World!")
+}
+</code></pre></div>
+    </article>
 </body>
+
 </html>
