added sample md, updated styles to show code block properly

--- a/template.html
+++ b/template.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> {{ Title }} </title>
     <link href="/styles.css" rel="stylesheet">
+    <link href="/theme/prism.css" rel="stylesheet" />
 </head>
 
 <body>
+    <script src="/theme/prism.js"></script>
     <article>
         {{ Content }}
     </article>
